exports[`parseToRgb should parse a hex color representation 1`] = `
Object {
  "blue": 174,
  "green": 67,
  "red": 255,
}
`;

exports[`parseToRgb should parse a hsl color representation 1`] = `
Object {
  "blue": 11,
  "green": 10,
  "red": 9,
}
`;

exports[`parseToRgb should parse a hsl color representation 2`] = `
Object {
  "blue": 11,
  "green": 10,
  "red": 9,
}
`;

exports[`parseToRgb should parse a hsla color representation 1`] = `
Object {
  "alpha": 0.75,
  "blue": 112,
  "green": 102,
  "red": 92,
}
`;

exports[`parseToRgb should parse a hsla color representation 2`] = `
Object {
  "alpha": 0.75,
  "blue": 112,
  "green": 102,
  "red": 92,
}
`;

exports[`parseToRgb should parse a reduced hex color representation 1`] = `
Object {
  "blue": 170,
  "green": 85,
  "red": 68,
}
`;

exports[`parseToRgb should parse a rgb color representation 1`] = `
Object {
  "blue": 255,
  "green": 67,
  "red": 174,
}
`;

exports[`parseToRgb should parse a rgb color representation 2`] = `
Object {
  "blue": 255,
  "green": 67,
  "red": 174,
}
`;

exports[`parseToRgb should parse a rgba color representation 1`] = `
Object {
  "alpha": 0.6,
  "blue": 255,
  "green": 67,
  "red": 174,
}
`;

exports[`parseToRgb should parse a rgba color representation 2`] = `
Object {
  "alpha": 0.6,
  "blue": 255,
  "green": 67,
  "red": 174,
}
`;
